--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,7 @@ channels:
   - conda-forge
 dependencies:
   - python
+  - time
   - numpy
   - pip
   - pip:
@@ -11,8 +12,12 @@ dependencies:
     - matplotlib
     # - matplotlib.pyplot as plt
     # - matplotlib.animation as animation
-    
-  # - requests
+    - requests
+    - json
+    - yfinance
+    - pytrends
+    - demjson
+  
   # # - os
   # - json
   # - pandas as pd
