--- a/environment.yml
+++ b/environment.yml
@@ -12,7 +12,7 @@ dependencies:
     - matplotlib
     - requests
     - json
-    - yfinance
+    # - yfinance
     # - pytrends
     # - demjson
   
